--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Syntax highlighting
 markdown:            kramdown
-highlighter:         pygments
+highlighter:         rogue
 
 # Permalinks
 permalink:           /:title
