--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ disqus:              disqus_shortname # get it on https://disqus.com/admin/
 author:
   name:           	 Sujan Thapa
   url:            	 http://thapasujan.com
-  facebook:          username
-  twitter:           username
+  facebook:          najus.sujan
+  twitter:           najus
   google_plus:       username
-  linkedin:          username
+  linkedin:          thapasujan
   dribbble:          username
   pinterest:         username
   kiva:              username
